[project]
name = "houseparty"
version = "0.1.0"
description = ""
authors = [
    {name = "dgeene",email = "david.geene@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material (>=9.7.0,<10.0.0)"
]

[tool.poetry]
packages = [{include = "houseparty", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
